Add more to development

--- a/app/views/docs/self-hosting.phtml
+++ b/app/views/docs/self-hosting.phtml
@@ -109,11 +109,11 @@
 </table>
 
 <h2><a href="/docs/installation#next-steps" id="next-steps">Next Steps</a></h2>
-<p>Appwrite's default setup is designed to empower you to start building quickly, but there are more configurable options available depending on your use case.</p>
-<p><a href="/docs/configuration">Learn about configuring your Appwrite instance</a></p>
+<p>Appwrite's default setup is designed to empower you to start building quickly, but there are more configurable options available depending on your use case. Here are some useful tips and configurable options to help you setup a development environment.</p>
+<p><a href="/docs/development">Learn about Appwrite in development</a></p>
 
 <p>If you are ready to move Appwrite to a production environment, there are some best practices you should know for performance and security.</p>
-<p><a href="/docs/configuration">Learn about Appwrite in production</a></p>
+<p><a href="/docs/production">Learn about Appwrite in production</a></p>
 
 <h2><a href="/docs/installation#manual" id="manual">Manual (using docker-compose.yml)</a></h2>
 
