Fix col width, fix telesign variable template

--- a/app/views/docs/sms-delivery.phtml
+++ b/app/views/docs/sms-delivery.phtml
@@ -5,7 +5,7 @@
 <table cellspacing="0" cellpadding="0" border="0" class="full margin-bottom-large text-size-small vertical">
     <thead>
         <tr>
-            <th style="width: 60px"></th>
+            <th style="width: 80px"></th>
             <th>SMS Provider</th>
             <th>Create Account</th>
             <th>Get Credentials</th>
@@ -114,7 +114,7 @@
     </tr>
     <tr>
         <td>TeleSign</td>
-        <td><code>sms://[CUSTOMER ID]:[API KEY]:telesign</code></td>
+        <td><code>sms://[CUSTOMER ID]:[API KEY]@telesign</code></td>
         <td><code>[TELESIGN PHONE NUMBER]</code></td>
     </tr>
     <tr>
