Fix hyperlink for configuration docs

--- a/app/views/docs/command-line.phtml
+++ b/app/views/docs/command-line.phtml
@@ -96,7 +96,7 @@ brew install --HEAD appwrite</code></pre>
 
 <p>If you get stuck anywhere, you can always use the <code>help</code> command to get the usage examples.</p>
 
-<h2><a href="/docs/command-line-ci#configuration" id="configuration">Configuration</a></h2>
+<h2><a href="/docs/command-line#configuration" id="configuration">Configuration</a></h2>
 
 <p>At any point, if you would like to change your server's endpoint, project ID, or self-signed certificate acceptance, use the <code>client</code> command.</p>
 
