--- a/app/views/docs/storage.phtml
+++ b/app/views/docs/storage.phtml
@@ -62,7 +62,7 @@
 <p>When you are in the <b>Files</b> tab, you can click <b>Add File</b> and select a file to upload. If the bucket is configured to accept the file type and size you are uploading, your file will be uploaded, and you will see the file in the list of files.
 </p>
 
-<p>You can also upload files programmatically using our SDKs</p>
+<p>You can also upload files programmatically using our SDKs:</p>
 
 <ul class="phases clear" data-ui-phases>
     <li>
@@ -181,8 +181,118 @@ File content.
     </li>
 </ul>
 
-<p>When you are trying to upload any files above 5MB, you will need to upload them in chunks. Don't worry; if you are using Appwrite's console or any of our SDKs, we handle that internally, so it will work no matter what file size you try to upload.
+<p>
+    When you are trying to upload any files above 5MB, you will need to upload them in chunks for better reliability and performance. If you're using an Appwrite SDK, this is handled automatically. If you're not using an SDK, you can learn more about file handling in the <a href="/docs/rest#file-handling">REST API</a> docs.
 </p>
+
+<h2><a href="/docs/storage#file-input" id="file-input">File Input</a></h2>
+
+<p>
+    Every language and platform handles file inputs differently. This section documents the expected input type of each SDK. Where applicable, Appwrite provides a <code>InputFile</code> class to accept multiple file sources, like paths, buffers, streams, or plain text.
+</p>
+
+<h3><a href="/docs/storage#file-input-client" id="file-input-client">Client SDK</a></h3>
+<ul class="phases clear" data-ui-phases>
+<li>
+    <h3>Web</h3>
+    <p>
+        The Appwrite Web SDK expects a <a href="https://developer.mozilla.org/en-US/docs/Web/API/File" target="_blank" rel="noopener">File</a> object for file creation. This is most commonly associated with DOM file inputs.
+    </p>
+
+    <p>
+        For example, for the input tag <code><?php echo htmlentities('<input type="file" id="uploader" multiple />'); ?></code>, you would call create file like this:
+    </p>
+    <div class="ide" data-lang="javascript" data-lang-label="Web SDK">
+        <pre class="line-numbers"><code class="prism language-javascript" data-prism>const promise = storage.createFile(
+    '[BUCKET_ID]',
+    ID.unique(),
+    document.getElementById('uploader').files[0]
+);</code></pre>
+    </div>
+
+</li>
+<li>
+    <h3>Flutter</h3>
+</li>
+<li>
+    <h3>Android</h3>
+    
+</li>
+<li>
+    <h3>Apple</h3>
+    
+</li>
+</ul>
+
+<h3><a href="/docs/storage#file-input-server" id="file-input-server">Server SDK</a></h3>
+<ul class="phases clear" data-ui-phases>
+<li>
+    <h3>Node.js</h3>
+
+    <p>
+        The Appwrite NodeJS SDK expects an <code>InputFile</code> class for file inputs.
+    </p>
+    <table class="full text-size-small">
+        <thead>
+        <tr>
+            <td style="width: 200px">Method</td>
+            <td>Description</td>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td><code>InputFile.fromPath(filePath, filename)<code></td>
+            <td>Used to upload files from a provided path.</td>
+        </tr>
+        <tr>
+            <td><code>InputFile.fromBuffer(buffer, filename)<code></td>
+            <td>Used to upload files from a <a href="https://nodejs.org/api/buffer.html#buffer" target="_blank" rel="noopener">Buffer</a> object.</td>
+        </tr>
+        <tr>
+            <td><code>InputFile.fromBlob(blob, filename)<code></td>
+            <td>Used to upload files from a <a href="https://developer.mozilla.org/en-US/docs/Web/API/Blob" target="_blank" rel="noopener">Blob</a> object.</td>
+        </tr>
+        <tr>
+            <td><code>InputFile.fromStream(stream, filename, size)<code></td>
+            <td>Used to upload files from a <a href="https://nodejs.org/api/stream.html#readable-streams" target="_blank" rel="noopener">Readable Stream</a> object.</td>
+        </tr>
+        <tr>
+            <td><code>InputFile.fromPlainText(content, filename)<code></td>
+            <td>Used to upload files in plain text. Expects a string encoded in UTF-8.</td>
+        </tr>
+        </tbody>
+    </table>
+</li>
+<li>
+    <h3>PHP</h3>
+    
+</li>
+<li>
+    <h3>Python</h3>
+    
+</li>
+<li>
+    <h3>Ruby</h3>
+    
+</li>
+<li>
+    <h3>Deno</h3>
+    
+</li>
+<li>
+    <h3>Dart</h3>
+    
+</li>
+<li>
+    <h3>Kotlin</h3>
+    
+</li>
+<li>
+    <h3>Swift</h3>
+    
+</li>
+</ul>
+
 
 <h2><a href="/docs/storage#imagePreview" id="imagePreview">Image Manipulation</a></h2>
 
