--- a/app/views/docs/command-line-ci.phtml
+++ b/app/views/docs/command-line-ci.phtml
@@ -34,8 +34,14 @@ The Appwrite CLI can be used in a non-interactive and headless manner, without s
     <pre class="line-numbers"><code class="prism language-bash" data-prism>appwrite deploy function --all --yes</code></pre>
 </div>
 
-<p>You can deploy collections non-interactively in a similar way by using the <code>--yes</code> option.</p>
+
+<p>You can deploy collections and teams non-interactively in a similar way by using the <code>--yes</code> option.</p>
 <p>Deploy all collections:</p>
 <div class="ide margin-bottom" data-lang="bash" data-lang-label="CLI">
     <pre class="line-numbers"><code class="prism language-bash" data-prism>appwrite deploy collection --all --yes</code></pre>
+</div>
+
+<p>Deploy all teams:</p>
+<div class="ide margin-bottom" data-lang="bash" data-lang-label="CLI">
+    <pre class="line-numbers"><code class="prism language-bash" data-prism>appwrite deploy team --all --yes</code></pre>
 </div>
