--- a/app/views/docs/command-line-deployment.phtml
+++ b/app/views/docs/command-line-deployment.phtml
@@ -2,7 +2,7 @@
 The Apprite CLI allows you to create and deploy collections and functions to your Appwrite project from a configuration file. This is especially helpful if you're trying to track functions and collection schemas using version control, or if you're promoting changes from development to production environments.
 </p>
 
-<h2><a href="/docs/command-line-deployment#initializeProject" id="initializeProject">Initializing Your Project</a></h2>
+<h2><a href="#initializeProject" id="initializeProject">Initializing Your Project</a></h2>
 
 <p>After you're logged in, the CLI needs to be initialized with your Appwrite project. You can initialize the CLI using:</p>
 
@@ -10,15 +10,22 @@ The Apprite CLI allows you to create and deploy collections and functions to you
     <pre class="line-numbers"><code class="prism language-bash" data-prism>appwrite init project</code></pre>
 </div>
 
-<p>The following prompts will guide you through the setup process. The init command also creates an <a href="/docs/command-line-deployment#appwriteJSON">appwrite.json</a> file representing your Appwrite project.
+<p>The following prompts will guide you through the setup process. The init command also creates an <a href="#appwriteJSON">appwrite.json</a> file representing your Appwrite project.
 
-<p>You can also fetch all the collections in your current project using:</p>
+<p>You can fetch all the existing collections in your current project using:</p>
 
 <div class="ide margin-bottom" data-lang="bash" data-lang-label="CLI">
     <pre class="line-numbers"><code class="prism language-bash" data-prism>appwrite init collection</code></pre>
 </div>
 
-<h2><a href="/docs/command-line-deployment#deployFunctions" id="deployFunctions">Deploying Cloud Functions</a></h2>
+<p>You can fetch all the existing teams in your current project using:</p>
+
+<div class="ide margin-bottom" data-lang="bash" data-lang-label="CLI">
+    <pre class="line-numbers"><code class="prism language-bash" data-prism>appwrite init team</code></pre>
+</div>
+
+
+<h2><a href="#deployFunctions" id="deployFunctions">Deploying Cloud Functions</a></h2>
 
 <p>The CLI also handles the creation and deployment of Appwrite Functions. You can initialize a new function using:</p>
 
@@ -38,22 +45,22 @@ The Apprite CLI allows you to create and deploy collections and functions to you
 ✓ Success Deployed Awesome Function ( 621229798628cf5bf712 )</code></pre>
 </div>
 
-<h2><a href="/docs/command-line-deployment#deployCollections" id="deployCollections">Deploying collections</a></h2>
+<h2><a href="#deployCollections" id="deployCollections">Deploying collections</a></h2>
 
-<p>The Appwrite CLI also helps you migrate your project's collections from a development server to a production server. You can deploy all the collections in your <a href="/docs/command-line-deployment#appwriteJSON">appwrite.json</a> file using:</p>
+<p>The Appwrite CLI also helps you migrate your project's collections from a development server to a production server. You can deploy all the collections in your <a href="#appwriteJSON">appwrite.json</a> file using:</p>
 
 <div class="ide margin-bottom" data-lang="bash" data-lang-label="CLI">
     <pre class="line-numbers"><code class="prism language-bash" data-prism>appwrite deploy collections</code></pre>
 </div>
 
-<h2><a href="/docs/command-line-deployment#avoidingConflicts" id="avoidingConflicts">Avoiding Conflicts</a></h2>
+<h2><a href="#avoidingConflicts" id="avoidingConflicts">Avoiding Conflicts</a></h2>
 <p>When using <code>appwrite.json</code>, changes made in the Appwrite Console can cause conflicts with the local config. To avoid conflicts, prefer updating configuration locally and deploying instead of using the console.</p>
 
-<h2><a href="/docs/command-line-deployment#appwriteJSON" id="appwriteJSON">The appwrite.json File</a></h2>
+<h2><a href="#appwriteJSON" id="appwriteJSON">The appwrite.json File</a></h2>
 
 <p>An <code>appwrite.json</code> file is created by the CLI when you initialize your project. It stores all the configuration for the CLI to be able to interact with your Appwrite project in JSON format. When using the <code>appwrite deploy</code> command, the CLI uses information from <code>appwrite.json</code> to deploy your functions and collections.</p>
 
-<h3><a href="/docs/command-line-deployment#configurable-options" id="configurable-options">Configurable Options</a></h3>
+<h3><a href="#configurable-options" id="configurable-options">Configurable Options</a></h3>
 <p>Here's a complete list of all configurable options in <code>appwrite.json</code>:</p>
 <table cellspacing="0" cellpadding="0" border="0" class="full margin-bottom-large">
     <thead>
@@ -76,18 +83,23 @@ The Apprite CLI allows you to create and deploy collections and functions to you
         </tr>
         <tr>
             <td><code>functions</code></td>
-            <td>array of <a href="/docs/command-line-deployment#function-options">functions</a></td>
+            <td>array of <a href="#function-options">functions</a></td>
             <td>Configuration of functions in your project.</td>
         </tr>
         <tr>
             <td><code>collections</code></td>
-            <td>array of <a href="/docs/command-line-deployment#collection-options">collections</a></td>
+            <td>array of <a href="#collection-options">collections</a></td>
             <td>Configuration of collections in your project.</td>
+        </tr>
+        <tr>
+            <td><code>teams</code></td>
+            <td>array of <a href="#teams-options">teams</a></td>
+            <td>Configuration of teams in your project.</td>
         </tr>
     </tbody>
 </table>
 
-<h3><a href="/docs/command-line-deployment#function-options" id="function-options">Function Options</a></h3>
+<h3><a href="#function-options" id="function-options">Function Options</a></h3>
 <table cellspacing="0" cellpadding="0" border="0" class="full margin-bottom-large">
     <thead>
         <tr>
@@ -155,7 +167,7 @@ The Apprite CLI allows you to create and deploy collections and functions to you
     </tbody>
 </table>
 
-<h3><a href="/docs/command-line-deployment#collection-options" id="collection-options">Collection Options</a></h3>
+<h3><a href="#collection-options" id="collection-options">Collection Options</a></h3>
 <table cellspacing="0" cellpadding="0" border="0" class="full margin-bottom-large">
     <thead>
         <tr>
@@ -204,6 +216,30 @@ The Apprite CLI allows you to create and deploy collections and functions to you
             <td><code>indexes</code></td>
             <td>array of objects</td>
             <td>Defines a list of indexes in the collection. <a href="docs/models/indexList">Learn more about the Indexes List Object</a>.</td>
+        </tr>
+    </tbody>
+</table>
+
+
+<h3><a href="#teams-options" id="teams-options">Teams Options</a></h3>
+<table cellspacing="0" cellpadding="0" border="0" class="full margin-bottom-large">
+    <thead>
+        <tr>
+            <th style="width: 150px">Option</th>
+            <th>Type</th>
+            <th>Description</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td><code>$id</code></td>
+            <td>string</td>
+            <td>Team ID.</td>
+        </tr>
+        <tr>
+            <td><code>name</code></td>
+            <td>string</td>
+            <td>Team Name.</td>
         </tr>
     </tbody>
 </table>
