--- a/app/views/docs/storage.phtml
+++ b/app/views/docs/storage.phtml
@@ -216,11 +216,59 @@ File content.
 </li>
 <li>
     <h3>Android</h3>
-    
+    <p>
+        The Appwrite Android SDK expects an <code>InputFile</code> class for file inputs.
+    </p>
+    <table class="full text-size-small">
+        <thead>
+        <tr>
+            <td style="width: 200px">Method</td>
+            <td>Description</td>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td><code>InputFile.fromPath(path: String)<code></td>
+            <td>Used to upload files from a provided path.</td>
+        </tr>
+        <tr>
+            <td><code>InputFile.fromFile(file: File)<code></td>
+            <td>Used to upload files from a <a href="https://docs.oracle.com/javase/8/docs/api/java/io/File.html" target="_blank" rel="noopener">File</a> object.</td>
+        </tr>
+        <tr>
+            <td><code>InputFile.fromBytes(bytes: ByteArray, filename: String, mimeType: String)<code></td>
+            <td>Used to upload files from a <a href="https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-byte-array/" target="_blank" rel="noopener">ByteArray</a> object. Specify the file <a href="https://developer.mozilla.org/en-US/docs/Web/HTTP/Basics_of_HTTP/MIME_types" target="_blank" rel="noopener">MIME type</a> using the <code>mimeType</code> param.</td>
+        </tr>
+        </tbody>
+    </table>
 </li>
 <li>
     <h3>Apple</h3>
-    
+    <p>
+        The Appwrite Apple SDK expects an <code>InputFile</code> class for file inputs.
+    </p>
+    <table class="full text-size-small">
+        <thead>
+        <tr>
+            <td style="width: 200px">Method</td>
+            <td>Description</td>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td><code>InputFile.fromPath(_ path: String)<code></td>
+            <td>Used to upload files from a provided path.</td>
+        </tr>
+        <tr>
+            <td><code>InputFile.fromData(_ data: Data, filename: String, mimeType: String)<code></td>
+            <td>Used to upload files from a <a href="https://developer.apple.com/documentation/foundation/data" target="_blank" rel="noopener">Data</a> object. Specify the file <a href="https://developer.mozilla.org/en-US/docs/Web/HTTP/Basics_of_HTTP/MIME_types" target="_blank" rel="noopener">MIME type</a> using the <code>mimeType</code> param.</td>
+        </tr>
+        <tr>
+            <td><code>InputFile.fromBuffer(_ buffer: ByteBuffer, filename: String, mimeType: String)<code></td>
+            <td>Used to upload files from a <a href="https://swiftinit.org/reference/swift-nio/niocore/bytebuffer" target="_blank" rel="noopener">NIO Buffer</a> object. Specify the file <a href="https://developer.mozilla.org/en-US/docs/Web/HTTP/Basics_of_HTTP/MIME_types" target="_blank" rel="noopener">MIME type</a> using the <code>mimeType</code> param.</td>
+        </tr>
+        </tbody>
+    </table>
 </li>
 </ul>
 
@@ -269,11 +317,55 @@ File content.
 </li>
 <li>
     <h3>Python</h3>
-    
+    <p>
+        The Appwrite Python SDK expects an <code>InputFile</code> class for file inputs.
+    </p>
+    <table class="full text-size-small">
+        <thead>
+        <tr>
+            <td style="width: 200px">Method</td>
+            <td>Description</td>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td><code>InputFile.from_path(path)<code></td>
+            <td>Used to upload files from a provided path.</td>
+        </tr>
+        <tr>
+            <td><code>InputFile.from_bytes(bytes)<code></td>
+            <td>Used to upload files from an array of bytes.</td>
+        </tr>
+        </tbody>
+    </table>
 </li>
 <li>
     <h3>Ruby</h3>
-    
+    <p>
+        The Appwrite Ruby SDK expects an <code>InputFile</code> class for file inputs.
+    </p>
+    <table class="full text-size-small">
+        <thead>
+        <tr>
+            <td style="width: 200px">Method</td>
+            <td>Description</td>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td><code>InputFile.from_path(path)<code></td>
+            <td>Used to upload files from a provided path.</td>
+        </tr>
+        <tr>
+            <td><code>InputFile.from_string(string)<code></td>
+            <td>Used to upload files from a String.</td>
+        </tr>
+        <tr>
+            <td><code>InputFile.from_bytes(bytes)<code></td>
+            <td>Used to upload files from an array of bytes.</td>
+        </tr>
+        </tbody>
+    </table>
 </li>
 <li>
     <h3>Deno</h3>
@@ -289,7 +381,31 @@ File content.
 </li>
 <li>
     <h3>Swift</h3>
-    
+    <p>
+        The Appwrite Swift SDK expects an <code>InputFile</code> class for file inputs.
+    </p>
+    <table class="full text-size-small">
+        <thead>
+        <tr>
+            <td style="width: 200px">Method</td>
+            <td>Description</td>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td><code>InputFile.fromPath(_ path: String)<code></td>
+            <td>Used to upload files from a provided path.</td>
+        </tr>
+        <tr>
+            <td><code>InputFile.fromData(_ data: Data, filename: String, mimeType: String)<code></td>
+            <td>Used to upload files from a <a href="https://developer.apple.com/documentation/foundation/data" target="_blank" rel="noopener">Data</a> object. Specify the file <a href="https://developer.mozilla.org/en-US/docs/Web/HTTP/Basics_of_HTTP/MIME_types" target="_blank" rel="noopener">MIME type</a> using the <code>mimeType</code> param.</td>
+        </tr>
+        <tr>
+            <td><code>InputFile.fromBuffer(_ buffer: ByteBuffer, filename: String, mimeType: String)<code></td>
+            <td>Used to upload files from a <a href="https://swiftinit.org/reference/swift-nio/niocore/bytebuffer" target="_blank" rel="noopener">NIO Buffer</a> object. Specify the file <a href="https://developer.mozilla.org/en-US/docs/Web/HTTP/Basics_of_HTTP/MIME_types" target="_blank" rel="noopener">MIME type</a> using the <code>mimeType</code> param.</td>
+        </tr>
+        </tbody>
+    </table>
 </li>
 </ul>
 
