--- a/app/views/docs/offline.phtml
+++ b/app/views/docs/offline.phtml
@@ -28,7 +28,7 @@
 
 <h2 href="#async-operation" id="async-operation">Asynchronous Operation</h2>
 <p>
-    When Offline Support is enabled, asynchronous operations only resolve after the request is accepted by the server. Requests made with the Client SDK may block code execution until network connection is available again.
+    When Offline Support is enabled, asynchronous write operations only resolve after the server accepts the request. Requests made with the Client SDK may block code execution until network connection is available again.
 </p>
 [TODO: Show UML diagram]
 
