--- a/app/views/docs/offline.phtml
+++ b/app/views/docs/offline.phtml
@@ -21,7 +21,7 @@
 
 [TODO: Code Example]
 <p>
-    Offline Support will cache all read request in a <a href="https://en.wikipedia.org/wiki/Cache_replacement_policies#LRU" target="_blank" rel="noopener">Least Recently Used (LRU)</a> cache, so the information can remain available even with no internet connection. The LRU cache defaults to a size of 16KB and can be configured using the <code>setOfflineCacheSize</code> method.
+    Offline Support will cache all read request in a <a href="https://en.wikipedia.org/wiki/Cache_replacement_policies#LRU" target="_blank" rel="noopener">Least Recently Used (LRU)</a> cache, so the information can remain available even with no internet connection. The LRU cache defaults to a size of 16MB and can be configured using the <code>setOfflineCacheSize</code> method.
 </p>
 
 [TODO: Code Example]
