feat: update platforms key

--- a/app/views/docs/getting-started-for-android.phtml
+++ b/app/views/docs/getting-started-for-android.phtml
@@ -2,7 +2,7 @@
 $platforms = $this->getParam('platforms');
 $versions = [];
 
-foreach($platforms['client']['languages'] as $lang) {
+foreach($platforms['client']['sdks'] as $lang) {
     $key = $lang['key'] ?? '';
     $version = $lang['version'] ?? '';
 
