--- a/app/views/docs/databases.phtml
+++ b/app/views/docs/databases.phtml
@@ -365,85 +365,9 @@ func main() async throws{
     </li>
 </ul>
 
-<p>The following query methods are currently supported:</p>
-<table cellspacing="0" cellpadding="0" border="0" class="full margin-bottom-large">
-    <thead>
-        <tr>
-            <th style="width: 100px">Query Method</th>
-            <th>SDK Method Example</th>
-            <th>Description</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <td>Equal</td>
-            <td><code>Query.equal("title", ["Iron Man"])</code></td>
-            <td>Returns document if attribute is equal to any value in the provided array. Applies to any indexed attribute.</td>
-        </tr>
-        <tr>
-            <td>Not Equal</td>
-            <td><code>Query.notEqual("title", ["Iron Man"])</code></td>
-            <td>Returns document if attribute is not equal to any value in the provided array. Applies to any indexed attribute.</td>
-        </tr>
-        <tr>
-            <td>Less Than</td>
-            <td><code>Query.lessThan("score", 10)</code></td>
-            <td>Returns document if attribute is less than the provided value. Applies to any indexed attribute.</td>
-        </tr>
-        <tr>
-            <td>Less Than or Equal</td>
-            <td><code>Query.lessThanEqual("score", 10)</code></td>
-            <td>Returns document if attribute is less than or equal to the provided value. Applies to any indexed attribute.</td>
-        </tr>
-        <tr>
-            <td>Greater Than</td>
-            <td><code>Query.greaterThan("score", 10)</code></td>
-            <td>Returns document if attribute is greater than the provided value. Applies to any indexed attribute.</td>
-        </tr>
-        <tr>
-            <td>Greater Than or Equal</td>
-            <td><code>Query.greaterThanEqual("score", 10)</code></td>
-            <td>Returns document if attribute is greater than or equal to the provided value. Applies to any indexed attribute.</td>
-        </tr>
-        <tr>
-            <td>Search</td>
-            <td><code>Query.search("text", "key words")</code></td>
-            <td>Searches string attributes for provided keywords. Applies to any string attribute with a full-text index.</td>
-        </tr>
-        <tr>
-            <td>Order Descending</td>
-            <td><code>Query.orderDesc("attribute")</code></td>
-            <td>Orders results in descending order by attribute. Attribute must be indexed. Pass in an empty string to return in natural order.</td>
-        </tr>
-        <tr>
-            <td>Order Ascending</td>
-            <td><code>Query.orderAsc("attribute")</code></td>
-            <td>Orders results in ascending order by attribute. Attribute must be indexed. Pass in an empty string to return in natural order.</td>
-        </tr>
-        <tr>
-            <td>Limit</td>
-            <td><code>Query.limit(25)</code></td>
-            <td>Limits the number of results returned by the query. Used for <a href="/docs/pagination#offset-pagination" id="offset-pagination">pagination</a>.</td>
-        </tr>
-        <tr>
-            <td>Offset</td>
-            <td><code>Query.offset(0)</code></td>
-            <td>Offset the results returned by skipping some of the results. Used for <a href="/docs/pagination#offset-pagination" id="offset-pagination">pagination</a>.</td>
-        </tr>
-        <tr>
-            <td>Cursor After</td>
-            <td><code>Query.cursorAfter("62a7...f620")</code></td>
-            <td>Places the cursor after the specified resource ID. Used for <a href="/docs/pagination#cursor-pagination" id="cursor-pagination">pagination</a>.</td>
-        </tr>
-        <tr>
-            <td>Cursor Before</td>
-            <td><code>Query.cursorBefore("62a7...a600")</code></td>
-            <td>Places the cursor before the specified resource ID. Used for <a href="/docs/pagination#cursor-pagination" id="cursor-pagination">pagination</a>.</td>
-        </tr>
-    </tbody>
-</table>
+<p>All Appwrite list endpoints support the same set of query methods. A full list can be found in the <a href="/docs/queries">Queries Guide</a>.</p>
 
-<p>Each query string is logically separated via <code>AND</code> operation. For <code>OR</code> operation, pass multiple values separated by commas:</p>
+<p>Each query method is logically separated via <code>AND</code> operation. For <code>OR</code> operation, pass multiple values separated by commas:</p>
 <ul class="phases clear" data-ui-phases>
     <li>
         <h3>Web</h3>
