--- a/app/views/docs/index.phtml
+++ b/app/views/docs/index.phtml
@@ -93,6 +93,7 @@ $cols = [
                     <li><a href="/docs/storage">Storage</a></li>
                     <li><a href="/docs/authentication">Authentication</a></li>
                     <li><a href="/docs/functions">Functions</a></li>
+                    <li><a href="/docs/queries">Queries</a></li>
                 </ul>
 
                 <div class="margin-bottom-small">
